feat: add logo to header and improve favicon
- Add logo display in header with blue background
- Implement fallback 'N' if logo image fails to load
- Add apple-touch-icon and theme-color for better mobile support
- Logo has hover animations (scale and rotate)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/n-logo.png" />
+    <link rel="apple-touch-icon" href="/n-logo.png" />
+    <meta name="theme-color" content="#1f2937" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes App - Organiza tus ideas</title>
   </head>
