fix: logo visible sin fondo, elimina boxShadow; soporte transparente

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Favicon with multiple formats for better compatibility -->
     <link rel="icon" type="image/png" sizes="32x32" href="/n-logo.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/n-logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/n-logo.png" />
     <link rel="shortcut icon" href="/n-logo.png" />
+    <link rel="icon" href="/n-logo.png" />
+    <!-- Preload logo for faster loading -->
+    <link rel="preload" href="/n-logo.png" as="image" type="image/png" />
     <meta name="theme-color" content="#1f2937" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes App - Organiza tus ideas</title>
